guest session bean and cli

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,7 +22,9 @@ j2ee.server.type=gfv510ee8
 jar.compress=false
 jar.content.additional=\
     ${reference.MerlionHot-ejb.dist-ear}:\
-    ${reference.HoRSManagementClient.j2ee-module-car}
+    ${reference.HoRSManagementClient.j2ee-module-car}:\
+    ${reference.HoRSReservationClient.j2ee-module-car}:\
+    ${reference.HoRSReservationClient.j2ee-module-car}
 jar.name=MerlionHot.ear
 javac.debug=true
 javac.deprecation=false
@@ -32,8 +34,10 @@ meta.inf=src/conf
 no.dependencies=false
 platform.active=default_platform
 project.HoRSManagementClient=HoRSManagementClient
+project.HoRSReservationClient=HoRSReservationClient
 project.MerlionHot-ejb=MerlionHot-ejb
 reference.HoRSManagementClient.j2ee-module-car=${project.HoRSManagementClient}/dist/HoRSManagementClient.jar
+reference.HoRSReservationClient.j2ee-module-car=${project.HoRSReservationClient}/dist/HoRSReservationClient.jar
 reference.MerlionHot-ejb.dist-ear=${project.MerlionHot-ejb}/dist/MerlionHot-ejb.jar
 resource.dir=setup
 source.root=.
