--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,51 @@
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# User defined
+nbproject/private/
+build/
+dist/
+
+# MerlionHot EJB module
+MerlionHot-ejb/nbproject/private/
+MerlionHot-ejb/build/
+MerlionHot-ejb/dist/
+
+# HoRSManagementClient module
+HoRSManagementClient/nbproject/private/
+HoRSManagementClient/build/
+HoRSManagementClient/dist/
+
+# HoRSReservationClient module
+HoRSReservationClient/nbproject/private/
+HoRSReservationClient/build/
+HoRSReservationClient/dist/
+
+# MerlionHotelLibrary module
+MerlionHotelLibrary/nbproject/private/
+MerlionHotelLibrary/build/
+MerlionHotelLibrary/dist/
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 /nbproject/private/
 /build/
 /dist/
@@ -9,3 +57,10 @@
 /MerlionHot-ejb/build/
 /MerlionHotelLibrary/build/
 /MerlionHotelLibrary/nbproject/private/
+.DS_Store
+HoRSManagementClient/build/
+HoRSManagementClient/dist/
+MerlionHot-ejb/build/
+MerlionHot-ejb/dist/
+MerlionHotelLibrary/build/
+nbproject/private/
